k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rate-after: "10"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"   # HTTPS termination (SSL offloading)
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - staticapp.test
    secretName: staticapp-tls

  rules:
  - host: staticapp.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
